--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -1,31 +1,33 @@
 .root {
     flex-grow: 1;
 }
+
 .paper {
     background-color: lightgray;
     padding: 16px 0 16px 16px;
     margin: auto;
     width: 100%;
     height: 250px;
-    /* max-width: 500px; */
 }
+
 .image {
     width: 200px;
     height: 200px;
 }
-#img-detail-page { 
+
+#img-detail-page {
     margin: auto;
     display: block;
     width: 220px;
     height: 220px;
-    /* max-width: 100%;
-    max-height: 100%; */
 }
+
 .menu-item {
     margin: 20px;
     width: 50%;
 }
-.details-content{
-    display: flex;
-        flex-Flow: row }
 
+.details-content {
+    display: flex;
+    flex-Flow: row
+}
